@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2022 Contributors to Eclipse Foundation.
  * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -113,7 +114,7 @@ public abstract class UIComponentBase extends UIComponent {
      * Each entry is an map of <code>PropertyDescriptor</code>s describing the properties of a concrete {@link UIComponent}
      * implementation, keyed by the corresponding <code>java.lang.Class</code>.
      * </p>
-     * 
+     *
      */
     private Map<Class<?>, Map<String, PropertyDescriptor>> descriptors;
 
@@ -1140,10 +1141,6 @@ public abstract class UIComponentBase extends UIComponent {
             Object savedBehaviors = saveBehaviorsState(context);
             Object savedBindings = null;
 
-            if (bindings != null) {
-                savedBindings = saveBindingsState(context);
-            }
-
             Object savedHelper = null;
             if (stateHelper != null) {
                 savedHelper = stateHelper.saveState(context);
@@ -1176,10 +1173,6 @@ public abstract class UIComponentBase extends UIComponent {
             values[0] = listeners != null ? listeners.saveState(context) : null;
             values[1] = saveSystemEventListeners(context);
             values[2] = saveBehaviorsState(context);
-
-            if (bindings != null) {
-                values[3] = saveBindingsState(context);
-            }
 
             if (stateHelper != null) {
                 values[4] = stateHelper.saveState(context);
@@ -1222,10 +1215,6 @@ public abstract class UIComponentBase extends UIComponent {
 
         if (values[2] != null) {
             behaviors = restoreBehaviorsState(context, values[2]);
-        }
-
-        if (values[3] != null) {
-            bindings = restoreBindingsState(context, values[3]);
         }
 
         if (values[4] != null) {
@@ -1292,7 +1281,7 @@ public abstract class UIComponentBase extends UIComponent {
         }
 
         Object result;
-        Class mapOrCollectionClass = attachedObject.getClass();
+        Class<?> mapOrCollectionClass = attachedObject.getClass();
         boolean newWillSucceed = true;
         // first, test for newability of the class.
         try {
@@ -1374,12 +1363,12 @@ public abstract class UIComponentBase extends UIComponent {
         if (stateObj instanceof List) {
             List<StateHolderSaver> stateList = (List<StateHolderSaver>) stateObj;
             StateHolderSaver collectionSaver = stateList.get(0);
-            Class mapOrCollection = (Class) collectionSaver.restore(context);
+            Class<?> mapOrCollection = (Class<?>) collectionSaver.restore(context);
             if (Collection.class.isAssignableFrom(mapOrCollection)) {
                 Collection<Object> retCollection = null;
                 try {
-                    retCollection = (Collection<Object>) mapOrCollection.newInstance();
-                } catch (InstantiationException | IllegalAccessException e) {
+                    retCollection = (Collection<Object>) mapOrCollection.getDeclaredConstructor().newInstance();
+                } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException e) {
                     if (LOGGER.isLoggable(Level.SEVERE)) {
                         LOGGER.log(Level.SEVERE, e.toString(), e);
                     }
@@ -1400,8 +1389,8 @@ public abstract class UIComponentBase extends UIComponent {
                 // If we were doing assertions: assert(mapOrList.isAssignableFrom(Map.class));
                 Map<Object, Object> retMap = null;
                 try {
-                    retMap = (Map<Object, Object>) mapOrCollection.newInstance();
-                } catch (InstantiationException | IllegalAccessException e) {
+                    retMap = (Map<Object, Object>) mapOrCollection.getDeclaredConstructor().newInstance();
+                } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException e) {
                     if (LOGGER.isLoggable(Level.SEVERE)) {
                         LOGGER.log(Level.SEVERE, e.toString(), e);
                     }
@@ -1442,26 +1431,6 @@ public abstract class UIComponentBase extends UIComponent {
             bindings.put(names[i], (ValueExpression) restoreAttachedState(context, states[i]));
         }
         return bindings;
-
-    }
-
-    private Object saveBindingsState(FacesContext context) {
-
-        if (bindings == null) {
-            return null;
-        }
-
-        Object values[] = new Object[2];
-        values[0] = bindings.keySet().toArray(new String[bindings.size()]);
-
-        Object[] bindingValues = bindings.values().toArray();
-        for (int i = 0; i < bindingValues.length; i++) {
-            bindingValues[i] = saveAttachedState(context, bindingValues[i]);
-        }
-
-        values[1] = bindingValues;
-
-        return values;
 
     }
 
@@ -1854,7 +1823,7 @@ public abstract class UIComponentBase extends UIComponent {
     private final static Object[] EMPTY_ARRAY = new Object[0];
 
     // Empty iterator for short circuiting operations
-    private final static Iterator<UIComponent> EMPTY_ITERATOR = new Iterator<UIComponent>() {
+    private final static Iterator<UIComponent> EMPTY_ITERATOR = new Iterator<>() {
 
         @Override
         public void remove() {
@@ -2201,10 +2170,10 @@ public abstract class UIComponentBase extends UIComponent {
 
         private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
             // noinspection unchecked
-            Class clazz = (Class) in.readObject();
+            Class<?> clazz = (Class<?>) in.readObject();
             try {
-                component = (UIComponent) clazz.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                component = (UIComponent) clazz.getDeclaredConstructor().newInstance();
+            } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException e) {
                 throw new RuntimeException(e);
             }
             component.restoreState(FacesContext.getCurrentInstance(), in.readObject());
